# Pet-Adoption-Platform

./: .coveragerc  .env.example  .flake8  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml  pytest.ini
.github/: setup-instructions.md
.github/workflows/: django-ci.yml
accounts/: forms.py  urls.py  views.py
pet_adoption/: celery.py  settings.py  urls.py
pets/: admin.py  api.py  api_views.py  models.py  serializers.py  urls.py  views.py
pets/migrations/: 0001_initial.py  0002_pet_owner.py
pets/templatetags/: pet_filters.py
pets/tests/: test_api.py
templates/: base.html
templates/accounts/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  profile.html  register.html
templates/pets/: admin_applications.html  adopt_form.html  home.html  pet_confirm_delete.html  pet_detail.html  pet_form.html  pet_list.html
